assets/less/base/ui/userpanel.less
// Userpanel
//
// Found at the left hand side of the whispeer interface the userpanel is the main navigation to switch the views.
//
// Markup:
// <div id="userpanel" style="width: 25%;">
//	<a href="{{user.basic.url}}" class="username">
//		<img src="img/user.png" alt="" class="userimg">
//		Username
//	</a>
//	<nav id="menu">
//		<ul class="left unstyled" id="mainMenu">
//			<li><a href="#">Profile</a></li>
//			<li><a href="#">Friends</a></li>
//			<li><a href="#">Messages</a></li>
//			<li><a href="#">Circles</a></li>
//			<li><a href="#">Settings</a></li>
//			<li><a href="#">Help</a></li>
//			<li><a href="#">Logout</a></li>
//		</ul>
//		<div class="clear-fix"></div>
//	</nav>
// </div>
//
// Styleguide 2.6

#userpanel {
	text-align: center;
	display: block;
	margin: 0;
	height: 100%;
}
#userpanel a {
	color: #f9f9f9 !important;
}
#userpanel-me {
	display: inline-block;
	width: 100%;
	height: 4rem;
	line-height: 4rem;

	background: rgba(60, 60, 60, 0.2);

	font-size: 1.25rem;
	font-weight: 400;
	text-align: center;
	&:hover {
		background: rgba(60, 60, 60, 0.25);
	}
}
#userpanel-me-image {
	width: 2rem;
	height: 2rem;

	vertical-align: middle;

	border-radius: 100%;
}
#userpanel-me-name {
	vertical-align: middle;
}
.brand {
	position: absolute;
	bottom: 1rem;
	left: 0;
	width: 100%;

	.large-text();
	.bold-text();
	text-decoration: none;
	text-shadow: 0px 0px 1px @white;
	text-rendering: optimizeLegibility;

	-webkit-font-smoothing: subpixel-antialiased;

	height: 2rem;
	line-height: 2rem;
}
.brand--normal {
	height: 30px;
	color: #fff;
	.text-shadow(0px 0px 2px @primaryDarkest);
}
.brand--inverse {
	color: @primaryLighter;
	.text-shadow(0px 0px 2px @primaryDarkest);
}
#userpanel-shortcuts {
	height: 3rem;
	line-height: 3rem;
	width: 100%;
}
.userpanel-shortcut {
	display: inline-block;
	float: left;
	width: 100% / 3;
	height: 3rem;
	line-height: 3rem;
	border: 1px solid @primary;
	border-right: none;
	&:extend(.box-fix);
	&:first-child { border-left: none; }
	&:hover {
		background: rgba(60, 60, 60, 0.1)
	}
}
#userpanel-menu {
	width: 100%;
	height: ~"calc(100% - 11rem)";
	overflow: scroll;
	z-index: 3;
}
.userpanel-menu--hide {
	display: none !important;
}
.userpanel-menu-link {
	display: inline-block;
	width: 100%;
	height: 3rem;
	line-height: 3rem;
	overflow: hidden;
	border-bottom: 1px solid @primary;
	&:hover {
		background: rgba(60, 60, 60, 0.1)
	}

	padding: 0 25px;
	text-align: center;

	&:extend(.box-fix);
}
.userpanel-menu-text {
	display: inline-block;
	width: ~"calc(100% - 2rem)";
	line-height: 3rem;
	color: #fff;
	text-align: center;
}
.userpanel-menu-icon {
	float: left;
	line-height: 3rem;
	font-size: 1.25rem;
}

